# SuperAgent

./: .dockerignore  .env.example  .env.mcp.example  .env.mcps.example  .gitignore  .gitmodules  .golangci.yml  .gosec.yml  .hadolint.yaml  .helmignore  .npmignore  .opencode.json  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  .snyk  .terraformignore  .trivy.yaml  .yamllint.yaml  100_PERCENT_COMPLETION_REPORT.md  ACTUALLY_UNFINISHED.md  ADD_REMAINING_SUBMODULES.sh  AGENTS.md  BUILD_FIX_PROGRESS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION_COMPLETE.md  CLAUDE_CODE_INTEGRATION_PLAN.md  CLI_AGENTS_COMPLETION_REPORT.md  CLI_AGENTS_INTEGRATION_COMPLETE.md  CLI_AGENTS_PORTING_COMPLETE.md  CLI_AGENTS_PORTING_TEST_PLAN.md  CLI_AGENT_SUBMODULE_STATUS.md  COGNEE_INTEGRATION_GUIDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SQL_SCHEMA.sql  COMPLETION_PLAN.md  COMPLETION_PLAN_README.md  COMPLETION_REPORT.md  COMPLETION_REPORT_2026_04_03.md  (+144 more)
.claude/: settings.local.json
.cleanup-backups/: database-adapter-backup.go  database-compat-backup.go
.github/: dependabot.yml
Agentic/: AGENTS.md  CLAUDE.md  README.md  go.mod
Benchmark/: AGENTS.md  CLAUDE.md  README.md  go.mod  go.sum
LLMOps/: AGENTS.md  CLAUDE.md  README.md  go.mod
MCP/: README.md  docker-compose.yml
Planning/: AGENTS.md  CLAUDE.md  README.md  go.mod  go.sum
SelfImprove/: AGENTS.md  CLAUDE.md  README.md  go.mod  go.sum
Toolkit/: AGENTS.md  CLAUDE.md  Makefile  README.md  REFACTORING_SUMMARY.md  RELOCATION_SUMMARY.md  coverage.html  go.mod  provider-chutes-config.json  provider-siliconflow-config.json
Upstreams/: GitHub.sh  GitHubHelixDevelopment.sh
Website/: AGENTS.md  CLAUDE.md  README.md  build.sh  package-lock.json  package.json
admin/: models-dashboard.html
challenge-results/: latest
challenges/: .env.example  .gitignore  CATALOG.md  FINAL_REPORT.md  IMPLEMENTATION_PLAN.md  README.md  Request_Challenges_Main.md
ci/: thresholds.json
cli_agents/: AGENT_DECK_ANALYSIS.md  AIDER_ANALYSIS.md  ANALYSIS_STATUS.md  CLINE_ANALYSIS.md  CODEX_ANALYSIS.md  CONTINUE_ANALYSIS.md  DEEPSEEK_CLI_ANALYSIS.md  FORGE_ANALYSIS.md  (+14 more)
mcp-servers/postgres-mcp/ingest/: README.md  postgres_docs.py  pyproject.toml  tiger_docs.py  tiger_docs_config.toml
sdk/python/: README.md  pyproject.toml
sdk/python/helixagent/: __init__.py  client.py  exceptions.py  types.py
sdk/python/tests/: __init__.py  test_client.py  test_exceptions.py  test_types.py
(+8219 files in other folders)
